Create skill model and create relationship with profile, add and fix tests about it
