# swagger/v1/swagger.yaml
@@ -343,6 +343,30 @@ components:
         title: Category title
         description: Category description
         slug: category-title
+    skill:
+      type: object
+      properties:
+        name:
+          type: string
+          required: true
+        icon_url:
+          type: string
+          required: false
+        level:
+          type: integer
+          required: false
+        category_id:
+          type: string
+          required: true
+        profile_id:
+          type: string
+          required: true
+      example:
+        name: Skill name
+        icon_url: image.url.com/icon
+        level: 1
+        category_id: 9
+        profile_id: 3
     profile:
       type: object
       properties:
@@ -373,6 +397,26 @@ components:
         social_media:
           type: string
           required: false
+        skills_attributes:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+                required: true
+              icon_url:
+                type: string
+                required: false
+              level:
+                type: integer
+                required: false
+              category_id:
+                type: string
+                required: true
+              profile_id:
+                type: string
+                required: true
       example:
         profile:
           name: user name updated
@@ -384,6 +428,12 @@ components:
           country: country updated
           phone_number: phone number updated
           social_media: linkedin.com,facebook.com,instagram.com,github.com,whatsapp.com,x.com
+          skills_attributes:
+          - name: skill name updated
+            icon_url: image.url.com/icon
+            level: 1
+            category_id: 9
+            profile_id: 3
 servers:
 - url: "{defaultHost}"
   variables:
